# fig-tree

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml
.github/workflows/: DockerPublish.yml  DocumentationPublish.yml  PackageRelease.yml  PackageTest.yml  Release.yml
develop/: 404.html  index.html  objects.inv
develop/_css/: theme.css
develop/deployment_guide/: configuration.html  docker.html
develop/developer_notes/: building_docs.html  first_time_setup.html  running_tests.html
develop/search/: search_index.js  search_index.json
develop/technical_references/: asgi.html  overview.html  primary_url_routing.html
docs/: getting_started.md  index.md  introduction.md
docs/_css/: theme.css
docs/deployment_guide/: configuration.md  deployment.md  docker.md
docs/developer_notes/: building_docs.md  first_time_setup.md  running_tests.md
docs/getting_started/: configuration.md  deployment.md
docs/technical_reference/: index.md  overview.md
docs/technical_reference/apps/: authentication.md  data_api.md  signup.md
docs/technical_references/: architecture.md  asgi.md  overview.md  primary_url_routing.md
fig_tree/: __init__.py  fig_tree.db  manage.py
fig_tree/apps/admin_utils/: __init__.py
fig_tree/apps/authentication/: __init__.py  forms.py  urls.py  views.py
fig_tree/apps/data_api/: __init__.py  serializers.py  urls.py  views.py
fig_tree/apps/error_pages/: __init__.py  handlers.py
fig_tree/apps/family_trees/: __init__.py  admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
fig_tree/apps/gen_data/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
fig_tree/apps/gen_rest_api/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
fig_tree/apps/signup/: __init__.py  admin.py  forms.py  managers.py  models.py  urls.py  views.py
fig_tree/apps/trees/: models.py  permissions.py  serializers.py  urls.py  views.py
fig_tree/main/: asgi.py  settings.py  urls.py
fig_tree/static/css/: style.css
fig_tree/templates/authentication/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
fig_tree/templates/base/: base.html  center_card.html  horizontal.html
fig_tree/templates/error_pages/: default.html
fig_tree/templates/includes/: footer.html  header.html  top_nav.html
fig_tree/templates/layouts/: base.html  center_card.html  top_nav.html
fig_tree/templates/main/: index.html
fig_tree/templates/pages/: error.html  index.html
fig_tree/templates/signup/: activate_account_email.html  activation_sent.html  activation_success.html  create_new_user.html  invalid_activation_link.html
fig_tree/tests/: utils.py
fig_tree/tests/authentication/: test_logged_out.py  test_login.py  test_password_reset_complete.py  (+3 more)
latest/deployment_guide/: configuration.html  docker.html
latest/developer_notes/: building_docs.html  first_time_setup.html  running_tests.html
latest/technical_references/: asgi.html  overview.html  primary_url_routing.html
tests/: test_utils.py
tests/authentication/: test_logged_out.py  test_login.py  test_password_reset_complete.py  test_password_reset_confirm.py  test_password_reset_done.py  test_password_reset_form.py
v0.1.0/: 404.html  index.html  objects.inv
v0.1.0/developer_notes/: first_time_setup.html
v0.1.0/search/: search_index.js  search_index.json
v0.1.1/deployment_guide/: configuration.html
v0.1.1/developer_notes/: building_docs.html  running_tests.html
v0.1.1/search/: search_index.js  search_index.json
v0.1.1/technical_references/: asgi.html
v0.1.2/: 404.html
v0.1.2/search/: search_index.json
(+132 files in other folders)
