[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fig-tree"
version = "0.0.0"
description = "Data management utility for geneological research"
authors = ["Daniel Perrefort"]
packages = [{ include = "fig_tree" }]
keywords = ["Family", "History", "Research", "Geneology"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Sociology :: Genealogy",
    "Typing :: Typed"
]

[tool.poetry.scripts]
fig-tree-manage = "fig_tree.manage:main"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.2"
django-bootstrap5 = "23.4"
django-environ = "0.11.2"
django-jazzmin = "2.6.0"
django-widget-tweaks = "1.5.0"
djangorestframework = "3.14.0"
pillow = "10.2.0"
psycopg2-binary = "2.9.9"
uvicorn = "0.27.1"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
selenium = "4.18.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = "2.0.0"
mkdocs-material = "9.5.12"
mkdocstrings = { version = "0.24.1", extras = ["python"] }
